z-index fix for exit button on mobile navbar for devices larger than 660 px width

--- a/src/Components/MenuNavBar.css
+++ b/src/Components/MenuNavBar.css
@@ -93,7 +93,7 @@ body {
 }
 
 .navbar-toggler {
-  z-index: 100;
+  z-index: 350;
 }
 
 .nav-link {
